--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <title>projeto soma</title>
   </head>
   <body>
-    <hi>10+15=</hi>
-    <input
+    <h1>10+15=</h1>
+    <input type="button"
+     onclick="mostra resultado()"
+     value="calcular" id="botão"/>
   </body>
   
 </html>
